pgadmin/postgresql-service.yaml
---
kind: "Endpoints"
apiVersion: "v1"
metadata:
  name: "postgresql-service"
subsets:
  -
    addresses:
      -
      # change with your postgresql server ip address
        ip: "172.18.112.1"
    ports:
      -
        port: 5432
        name: "postgresql-service"
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "postgresql-service"
spec:
  ports:
    -
      name: "postgresql-service"
      protocol: "TCP"
      port: 5432
      targetPort: 5432
      nodePort: 0
